# tutorials

./: LICENSE  README.md
logs/: foo.py
redpanda/: Pipfile  README.md  docker-compose.yaml  index-config.yaml  redpanda-source.yaml  send_messages_to_topic.py
rust-app-tracing/: docker-compose.yaml  tracing-rust-app-1686656534396.json
rust-app-tracing/request_script/: main.go
rust-app-tracing/web-api/: Cargo.toml
rust-app-tracing/web-api/src/: lib.rs  main.rs  models.rs  telemetry.rs
simple-lambda-stack/: Pipfile  README.md  cli.py
simple-lambda-stack/cdk/: __init__.py  app.py  constants.py
tracing/: my_app.py  my_instrumented_app.py  my_ip.py  my_manually_intrumented_app.py
